# QuickShare

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  saida.rs
src/: database.rs  handlers.rs  main.rs  models.rs  routes.rs
